login account profile bank account

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,9 +22,9 @@
   <div class="col-12">
     <button class="btn btn-primary w-100" type="submit" style="margin-bottom: 10px;">Login</button>
   </div>
-  <div class="col-12" style="margin-bottom: 5px;">
+  {{!-- <div class="col-12" style="margin-bottom: 5px;">
     <span>Don't have an account? <a href="/pay/register" >Register </a></span>
-  </div>
+  </div> --}}
   </form>
 </div>
 </div>
