--- a/views/_layouts/header.hbs
+++ b/views/_layouts/header.hbs
@@ -3,20 +3,13 @@
     
     <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
       <ol class="breadcrumb d-flex m-0">
-        {{#if game}}
-         <h1 style="color: aliceblue; margin-left: 470px;">SERVER AUTH</h1>
-        {{else}}
-        {{#if isLogin}}
-        
-          <a style="margin-left: 20px;" href="/pay/login" class="btn btn-warning rounded-pill">
-          <b>Register</b></a>
-        {{else}}
        
+        {{#if isLogin}}
+          <a style="margin-left: 20px;" href="/pay/login" class="btn btn-warning rounded-pill">
+          <b>Logout</b></a>
+        {{else}}
          <a style="margin-left: 20px;" href="/pay/login" class="btn btn-warning rounded-pill">
           <b>Login</b></a>
-        <a style="margin-left: 20px;" href="/pay/register" class="btn btn-warning rounded-pill">
-          <b>Register</b></a>
-        {{/if}}
         {{/if}}
 
       </ol>
