deposit, trafer money for other account

--- a/views/_layouts/header.hbs
+++ b/views/_layouts/header.hbs
@@ -7,6 +7,12 @@
         {{#if isLogin}}
           <a style="margin-left: 20px;" href="/pay/login" class="btn btn-warning rounded-pill">
           <b>Logout</b></a>
+           <a style="margin-left: 20px;" href="/pay/tranfer" class="btn btn-warning rounded-pill">
+          <b>Credit tranfer</b></a>
+          <a style="margin-left: 20px;" href="/pay/tranfer" class="btn btn-warning rounded-pill">
+          <b>History tranfer</b></a>
+          <a style="margin-left: 20px;" href="/pay/profile" class="btn btn-warning rounded-pill">
+          <b>Home</b></a>
         {{else}}
          <a style="margin-left: 20px;" href="/pay/login" class="btn btn-warning rounded-pill">
           <b>Login</b></a>
