--- a/views/_layouts/container.hbs
+++ b/views/_layouts/container.hbs
@@ -15,8 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-  <title>System payment</title>
+  <title>{{title}}</title>
   <style>
   </style>
 </head>
