--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,7 @@
     <h2>Login</h2>
   </div>
   <div class="card-body">
-    <form class="row g-3" id="loginForm" method="post" action="/pay/login">
+    <form class="row g-3" id="loginForm" method="post" action="/login">
       <div class="col-12">
         <label for="username">Username</label>
         <input type="text" class="form-control" placeholder="Username" id="username" name="username" required
