update just only account for two systems

--- a/views/tranfer.hbs
+++ b/views/tranfer.hbs
@@ -3,7 +3,7 @@
         <h2>Infomation receiver</h2>
     </div>
     <div class="card-body">
-        <form class="row g-3" method="post" action="/pay/tranfer">
+        <form class="row g-3" method="post" action="/pay/tranferr">
             <div class="col-12">
                 <label for="username" style="font-weight: bold;">Username</label>
                 <input type="text" class="form-control" id="username" name="username" value="{{username}}" />
