--- a/views/_layouts/header.hbs
+++ b/views/_layouts/header.hbs
@@ -9,7 +9,7 @@
           <b>Logout</b></a>
            <a style="margin-left: 20px;" href="/pay/tranfer" class="btn btn-warning rounded-pill">
           <b>Credit tranfer</b></a>
-          <a style="margin-left: 20px;" href="/pay/tranfer" class="btn btn-warning rounded-pill">
+          <a style="margin-left: 20px;" href="/pay/history" class="btn btn-warning rounded-pill">
           <b>History tranfer</b></a>
           <a style="margin-left: 20px;" href="/pay/profile" class="btn btn-warning rounded-pill">
           <b>Home</b></a>
