--- a/views/tranfer.hbs
+++ b/views/tranfer.hbs
@@ -12,14 +12,14 @@
                 </div>
             </div>
             <div class="col-12">
-                <label for="username" style="font-weight: bold;">How many you want to tranfer?</label>
+                <label for="username" style="font-weight: bold;">How many do you want to tranfer?</label>
                 <input type="text" class="form-control" id="balance" name="money" value="{{money}}" />
                 <div style="color: red;">
                     {{msgn}}
                 </div>
             </div>
             <div class="col-12">
-                <button class="btn btn-primary w-100" type="submit">Tranfer</button>
+                <button class="btn btn-primary w-100" style="margin-top: 18px; height: 48px;" type="submit">Tranfer</button>
             </div>
         </form>
     </div>
