--- a/views/login.hbs
+++ b/views/login.hbs
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="col-12">
-        <button class="btn btn-primary w-100" type="submit" style="margin-bottom: 10px;">Login</button>
+        <button class="btn btn-primary w-100" type="submit" style="margin-top: 18px; height: 48px;" >Login</button>
       </div>
     </form>
   </div>
