add message for tranfer money

--- a/views/history.hbs
+++ b/views/history.hbs
@@ -11,6 +11,7 @@
                 <p><b>Số tiền: {{#ifBig this.money 0}}<span style="color: #15bcac;">+{{this.money}} VND</span>{{else}}<span style="color: red;">{{this.money}} VND</span>{{/ifBig}}</b></p>
                 <p><b>Số dư cuối: <span style="color: #215E88 ;">{{this.remainder}} VND</span></b></p>
                 <p><b>Tài khoản giao dịch: "{{this.otherAccount}}"</b></p>
+                <p><b>Nội dung giao dịch:</b> {{this.message}}</p>
             </div>
         </div>
     </div>
