--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -67,11 +67,11 @@
         <form class="row g-3">
             <div class="col-12">
                 <label for="username" style="font-weight: bold;">Username</label>
-                <input type="text" class="form-control" id="username" name="username" value="{{username}}" readonly />
+                <input type="text" class="form-control" style="color: #215E88 ; font-weight: bold;" id="username" name="username" value="{{username}}" readonly />
             </div>
             <div class="col-12">
                 <label for="username" style="font-weight: bold;">Balance</label>
-                <input type="text" class="form-control" id="balance" name="balance" value="{{balance}}" readonly />
+                <input type="text" class="form-control" style="color: #215E88 ; font-weight: bold;" id="balance" name="balance" value="{{balance}} VND" readonly />
             </div>
         </form>
         <div class="col-12">
