--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,4 @@
 <style>
-
     /* The popup form - hidden by default */
     .form-popup {
         border-radius: 5px;
@@ -58,24 +57,61 @@
     .open-button:hover {
         opacity: 1;
     }
+
+    .alert {
+        position: fixed;
+        margin-bottom: 470px;
+        padding: 20px;
+        background-color: #04AA6D;
+        opacity: 1;
+        transition: opacity 0.6s;
+        color: white;
+    }
+
+    .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    .closebtn:hover {
+        color: black;
+    }
 </style>
+
+{{#if tranfer}}
+<div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    <strong>Success!</strong> The money was transferred.
+</div>
+{{else}}
+{{/if}}
 <div class="card" style="width: 400px; height: fit-content;">
     <div class="card-header text-center">
         <h2>Bank account</h2>
     </div>
+
     <div class="card-body" id="myform">
         <form class="row g-3">
             <div class="col-12">
                 <label for="username" style="font-weight: bold;">Username</label>
-                <input type="text" class="form-control" style="color: #215E88 ; font-weight: bold;" id="username" name="username" value="{{username}}" readonly />
+                <input type="text" class="form-control" style="color: #215E88 ; font-weight: bold;" id="username"
+                    name="username" value="{{username}}" readonly />
             </div>
             <div class="col-12">
                 <label for="username" style="font-weight: bold;">Balance</label>
-                <input type="text" class="form-control" style="color: #215E88 ; font-weight: bold;" id="balance" name="balance" value="{{balance}} VND" readonly />
+                <input type="text" class="form-control" style="color: #215E88 ; font-weight: bold;" id="balance"
+                    name="balance" value="{{balance}} VND" readonly />
             </div>
         </form>
         <div class="col-12">
-            <button class="btn btn-primary w-100" style="margin-top: 18px; height: 48px;" onclick="openForm()" type="submit">Deposit</button>
+            <button class="btn btn-primary w-100" style="margin-top: 18px; height: 48px;" onclick="openForm()"
+                type="submit">Deposit</button>
         </div>
         <div class="form-popup" id="myForm">
             <form method="post" action="/pay/deposit" class="form-container">
