--- a/views/tranfer.hbs
+++ b/views/tranfer.hbs
@@ -21,10 +21,8 @@
             </div>
              <div class="col-12">
                 <label for="message" style="font-weight: bold;">Message</label>
-                <textarea name="message" cols="40" rows="5"></textarea>
-                <div style="color: red;">
-                    {{msgn}}
-                </div>
+                <textarea name="message" cols="40" rows="5" >{{message}}</textarea>
+                
             </div>
             <div class="col-12">
                 <button class="btn btn-primary w-100" style="margin-top: 18px; height: 48px;"
