--- a/views/tranfer.hbs
+++ b/views/tranfer.hbs
@@ -21,7 +21,7 @@
             </div>
              <div class="col-12">
                 <label for="message" style="font-weight: bold;">Message</label>
-                <textarea name="message" cols="40" rows="5" >{{message}}</textarea>
+                <textarea name="message" cols="40" rows="5" maxlength="30" >{{message}}</textarea>
                 
             </div>
             <div class="col-12">
