--- a/views/_layouts/header.hbs
+++ b/views/_layouts/header.hbs
@@ -5,7 +5,7 @@
       <ol class="breadcrumb d-flex m-0">
        
         {{#if isLogin}}
-          <a style="margin-left: 20px;" href="/pay/login" class="btn btn-warning rounded-pill">
+          <a style="margin-left: 20px;" href="/logout" class="btn btn-warning rounded-pill">
           <b>Logout</b></a>
            <a style="margin-left: 20px;" href="/pay/tranfer" class="btn btn-warning rounded-pill">
           <b>Credit tranfer</b></a>
